test/error/wrong_arg_num.colgm
struct A {}

impl A {
    pub func test(a: i32, b: i64, c: f32, d: f64) {
        // ...
    }

    pub func test_method(self, a: i32, b: i64, c: f32, d: f64) {
        // ...
    }
}

func main() -> i32 {
    A::test(1, 2, 3);
    A {}.test_method(1, 2, 3);
    return 0;
}