test/error/wrong_arg_num.result
Warning: unused variable "a"
  --> test/error/wrong_arg_num.colgm:4:19
  | 
4 |     pub func test(a: i32, b: i64, c: f32, d: f64) {
  |                   ^^^^^^

Warning: unused variable "d"
  --> test/error/wrong_arg_num.colgm:4:43
  | 
4 |     pub func test(a: i32, b: i64, c: f32, d: f64) {
  |                                           ^^^^^^

Warning: unused variable "c"
  --> test/error/wrong_arg_num.colgm:4:35
  | 
4 |     pub func test(a: i32, b: i64, c: f32, d: f64) {
  |                                   ^^^^^^

Warning: unused variable "b"
  --> test/error/wrong_arg_num.colgm:4:27
  | 
4 |     pub func test(a: i32, b: i64, c: f32, d: f64) {
  |                           ^^^^^^

Warning: unused variable "d"
  --> test/error/wrong_arg_num.colgm:8:56
  | 
8 |     pub func test_method(self, a: i32, b: i64, c: f32, d: f64) {
  |                                                        ^^^^^^

Warning: unused variable "a"
  --> test/error/wrong_arg_num.colgm:8:32
  | 
8 |     pub func test_method(self, a: i32, b: i64, c: f32, d: f64) {
  |                                ^^^^^^

Warning: unused variable "c"
  --> test/error/wrong_arg_num.colgm:8:48
  | 
8 |     pub func test_method(self, a: i32, b: i64, c: f32, d: f64) {
  |                                                ^^^^^^

Warning: unused variable "b"
  --> test/error/wrong_arg_num.colgm:8:40
  | 
8 |     pub func test_method(self, a: i32, b: i64, c: f32, d: f64) {
  |                                        ^^^^^^

Error: expect 4 argument(s), but get 3
  --> test/error/wrong_arg_num.colgm:14:13
   | 
14 |     A::test(1, 2, 3);
   |             ^^^^^^^^
  --> test/error/wrong_arg_num.colgm:4:9
  | 
4 |     pub func test(a: i32, b: i64, c: f32, d: f64) {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |         // ...
  | ^^^^^^^^^^^^^^
6 |     }
  | ^^^^^ 
 note: function defined here

Error: expect 4 argument(s), but get 3
  --> test/error/wrong_arg_num.colgm:15:22
   | 
15 |     A {}.test_method(1, 2, 3);
   |                      ^^^^^^^^
  --> test/error/wrong_arg_num.colgm:8:9
   | 
 8 |     pub func test_method(self, a: i32, b: i64, c: f32, d: f64) {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 9 |         // ...
   | ^^^^^^^^^^^^^^
10 |     }
   | ^^^^^ 
  note: function defined here